# gz_wgpu_rt_lidar

./: .gitignore  .uncrustify.cfg  CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
.github/workflows/: ci.yml
examples/: box.sdf  cars.sdf  custom.sdf  demo.sdf  gzcar.sdf  hatchback.sdf  model.sdf  orig_sensor.sdf  shapes.sdf  world_gen.py
hooks/: resource_paths.dsv.in  resource_paths.sh
launch/: demo_bridge.launch.py
src/: rtmanager.cc  rtmanager.hh  rtsensor.cc  rtsensor.hh  rust_binding.h  wgpu_sensor.cc
src/rust_system/: Cargo.toml  cbindgen.toml
src/rust_system/src/: lib.rs
