<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_wgpu_rt_lidar</name>
  <version>0.0.0</version>
  <description>Provides a proof of concept raytracing lidar sensors that is compatible with a wide variety of GPUs</description>
  <maintainer email="arjo129@gmail.com">Arjo Chakravarty</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gz_sim_vendor</depend>
  <depend>gz_common_vendor</depend>
  <depend>cargo</depend>

  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
