[package]
name = "rust_system"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu_rt_lidar = { path="/home/arjo/ws/wgpu_src/wgpu_rt_lidar" }
wgpu = { git = "https://github.com/gfx-rs/wgpu", branch = "trunk" }
glam = { version = "0.29.2", features = ["bytemuck"] }
futures="0.3.31"
rerun = "0.22.1"
ndarray= "*"

[lib]
crate-type=["staticlib"]
