[package]
name = "rust_system"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu_rt_lidar = { git = "https://github.com/arjo129/wgpu_rt_lidar.git" , rev = "9bf774fd50bbf1f8f36d35af90bc8cf53a65d27d"}
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "e86ed8b6c858451fa6da212dc9835730ad4da826" }
glam = { version = "0.29.2", features = ["bytemuck"] }
futures="0.3.31"
rerun = "0.22.1"
ndarray= "*"

[lib]
crate-type=["staticlib"]
