[package]
name = "rust_system"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu_rt_lidar = { git = "https://github.com/arjo129/wgpu_rt_lidar.git" , rev = "1e2a45ae03a705efb875b5bc1a45264b73dd82c2"}
glam = { version = "0.29.2", features = ["bytemuck"] }
futures="0.3.31"
rerun = "0.22.1"
ndarray= "*"

[lib]
crate-type=["staticlib"]
